crates/test-ui/ui/extern_class_wrong_mutability.stderr
error[E0277]: the trait bound `MainThreadOnly: ValidSubclassMutability<InteriorMutable>` is not satisfied
 --> ui/extern_class_wrong_mutability.rs
  |
  | / extern_class!(
  | |     pub struct MyAnyThreadClass;
  | |
  | |     unsafe impl ClassType for MyAnyThreadClass {
... |
  | |     }
  | | );
  | |_^ the trait `ValidSubclassMutability<InteriorMutable>` is not implemented for `MainThreadOnly`
  |
  = help: the trait `ValidSubclassMutability<MainThreadOnly>` is implemented for `MainThreadOnly`
  = help: for that trait implementation, expected `MainThreadOnly`, found `InteriorMutable`
note: required by a bound in `assert_mutability_matches_superclass_mutability`
 --> $WORKSPACE/crates/objc2/src/__macro_helpers/declare_class.rs
  |
  | pub fn assert_mutability_matches_superclass_mutability<T>()
  |        ----------------------------------------------- required by a bound in this function
...
  |     <T::Super as ClassType>::Mutability: ValidSubclassMutability<T::Mutability>,
  |                                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_mutability_matches_superclass_mutability`
  = note: this error originates in the macro `$crate::__inner_extern_class` which comes from the expansion of the macro `extern_class` (in Nightly builds, run with -Z macro-backtrace for more info)
